Fixed experience lists' spacing

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -561,7 +561,8 @@ a:hover {
 	display: grid;
 	grid-template-columns: 20px auto;
 	grid-template-rows: auto auto;
-	column-gap: 5px;
+	column-gap: 10px;
+	row-gap: 10px;
 	grid-column-start: 2;
 }
 
